# ff_data_py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: scoring_models.md
ff_data_py/: __init__.py  data_processing.py
scoring/: .template.toml
scoring_models/: .template.toml
tests/: __init__.py  test_data_processing.py
